// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<style>
{
  "IS1": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS10": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS11": {
    "fontWeight": "bold",
  },
  "IS12": {
    "fontStyle": "italic",
  },
  "IS13": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS14": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS2": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS3": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS4": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS5": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS6": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS7": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS8": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS9": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
}
</style>

<KeyFactsContainer>
  <KeyFactsTitle
    title="Example title"
  />
  <KeyFactsWrapper>
    <View>
      <View />
      <Text>
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text>
        An example 
        <TextLink
          target={null}
          url="https://www.thetimes.co.uk/test/link"
        />
      </Text>
    </View>
    <View>
      <View />
      <Text>
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Example text 
        <Text>
          this is bold 
        </Text>
        <Text>
          this is in italics.
        </Text>
      </Text>
    </View>
  </KeyFactsWrapper>
</KeyFactsContainer>
`;

exports[`2. key facts without title 1`] = `
<style>
{
  "IS1": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS10": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS11": {
    "fontWeight": "bold",
  },
  "IS12": {
    "fontStyle": "italic",
  },
  "IS13": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS14": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS2": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS3": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS4": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS5": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS6": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS7": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS8": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
  },
  "IS9": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
}
</style>

<KeyFactsContainer>
  <KeyFactsWrapper>
    <View>
      <View />
      <Text>
        Example bullet text
      </Text>
    </View>
    <View>
      <View />
      <Text>
        An example 
        <TextLink
          target={null}
          url="https://www.thetimes.co.uk/test/link"
        />
      </Text>
    </View>
    <View>
      <View />
      <Text>
        More example text.
      </Text>
    </View>
    <View>
      <View />
      <Text>
        Example text 
        <Text>
          this is bold 
        </Text>
        <Text>
          this is in italics.
        </Text>
      </Text>
    </View>
  </KeyFactsWrapper>
</KeyFactsContainer>
`;
